--- a/project.config.json
+++ b/project.config.json
@@ -21,7 +21,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.0",
-	"appid": "wxbcec2d01526ba205",
+	"appid": "wx346f4db97545cf72",
 	"projectname": "%E5%BC%B1%E7%B1%BB%E5%9E%8B",
 	"debugOptions": {
 		"hidedInDevtools": []
